[package]
name = "imp"
version = "0.1.0"
edition = "2024"

[lib]
name = "imp"
path = "src/lib.rs"

[[bin]]
name = "imp-cli"
path = "src/bin/cli.rs"

[build-dependencies]
lalrpop = "*"

[dependencies]
enumn = "*"
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
string-interner = "*"
tempfile = "*"
